--- a/home.html
+++ b/home.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>Quit Slackin'</title>
-	<script type="text/javascript" src="assets/js/lib/jquery-3.3.1.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="assets/css/todos.css">
+	<script type="text/javascript" src="./jquery-3.3.1.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="./todos.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Cedarville+Cursive" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
@@ -62,6 +62,6 @@
 
 	</div>
 
-	<script type="text/javascript" src="assets/js/todos.js"></script>
+	<script type="text/javascript" src="./todos.js"></script>
 </body>
 </html>
